--- a/styles.css
+++ b/styles.css
@@ -61,3 +61,80 @@ body {
   border-radius: 8px;
   margin-top: 32px;
 }
+
+/* --------------- Style for Dev QA Section -------- */
+.devqa-container {
+  width: 90%;
+  margin: 80px auto;
+  padding: 80px 95px;
+  background-color: rgba(13, 19, 33, 0.02);
+}
+
+.dev-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 24px;
+  width: 90%;
+}
+
+.dev-title h1 {
+  font-size: 32px;
+}
+
+.dev-title p {
+  font-size: 16px;
+  font-weight: 400;
+  text-align: center;
+}
+
+.dev-content {
+  margin-top: 48px;
+  padding: 48px;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.dev-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 70px;
+  background-color: #ffffff;
+  padding: 48px;
+  border-radius: 8px;
+}
+
+.dev-content-container {
+  width: 90%;
+  height: 100%;
+}
+
+.dev-content-img {
+  width: 240px;
+  height: 240px;
+}
+
+.dev-item-title {
+  font-size: 24px;
+  font-weight: 700px;
+  color: #0d1321;
+  opacity: 70%;
+}
+
+.dev-item-description {
+  font-size: 16px;
+  font-weight: 400px;
+  color: #0d1321;
+  margin: 16px 0 32px;
+}
+
+.dev-btn {
+  padding: 12px 20px;
+  font-size: 20px;
+  font-weight: 600px;
+  background: #ffffff;
+  color: #0d1321;
+  border: solid 1px #0d1321;
+}
